# codex-patcher

./: .gitignore  ADDING_PATCHES.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  HANDOFF_PHASE7.md  KNOWN_ISSUES.md  Makefile  PATCH_SUMMARY.md  PATCH_WORKFLOW.md  PATH_DETECTION_DESIGN.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE7_READY.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PLAN_CODEX_XTREME.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  USAGE_EXAMPLES.md  find-subagent-limit.sh  justfile  plan.md  spec.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
analysis/: codex-0.98-to-0.99-changelog.md
db/: SUMMARY.md  codex_patch_queries.sql
docs/: api.md  architecture.md  getting-started.md  patches.md  toml.md
patches/: ALL_PATCHES.md  QUICKSTART.md  README.md  analytics-counters.toml  approvals-ui.toml  cargo-config.toml  io-drain-interp.toml  native-ca-roots.toml  no-employee-detection.toml  os-info-metrics.toml  performance.toml  privacy-v0.105-alpha13.toml  privacy-v0.99-alpha1-alpha22.toml  privacy-v0.99-alpha14-alpha20.toml  privacy-v0.99-alpha23.toml  privacy.toml  proxy-intercept.toml  sandbox-metrics.toml  subagent-limit.toml  timing-loops.toml  undo-command.toml  xtreme-profile.toml  zack-profile.toml
scripts/: build_codex_version_patch_db.py  cleanup-rollouts.sh  test
src/: cache.rs  edit.rs  fuzzy.rs  lib.rs  main.rs  pool.rs  safety.rs  validate.rs
subagent-logs/: agent1_toml_core.patch  agent2_toml_ops.patch  agent3_config.patch
tests/: cli_integration.rs  e2e_workflow.rs  (+2 more)
(+51 files in other folders)
