[package]
name = "codex-patcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Codex Patcher Contributors"]
description = "Automated code patching system for Rust with byte-span replacement and tree-sitter integration"
license = "MIT OR Apache-2.0"

[dependencies]
# Core patching - use ast-grep-language for built-in Rust support
ast-grep-core = "0.40"
ast-grep-language = "0.40"
toml_edit = { version = "0.24", features = ["serde"] }

# Low-level tree-sitter for raw parsing/validation (version must match ast-grep)
tree-sitter = "0.25"

# Validation - syn for Rust-specific semantic transforms
syn = { version = "2", features = ["full", "parsing"] }
cargo_metadata = "0.18"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
filetime = "0.2"
tempfile = "3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
home = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }
similar = "2"
colored = "2"
walkdir = "2"

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
proptest = "1"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
